5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_1580.log
== TEST (2019-05-27 19:12:49) 
-- CODE:
notas=array(eval(input("notas obtidas: ")))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:13:17) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:13:24) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:13:49) 
-- CODE:
from numpy import *
notas=array(input("notas obtidas: "))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:14:53) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:22:29) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(input("nome dos alunos: "))



print(nome)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:23:01) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))



print(nome)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:23:46) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))



print(nome)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:24:29) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))



print(nome)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:25:11) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))



print(nome)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:35:57) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas==-1):
		falta=falta+1
	elif(notas>=6):
		apro=aprov+1
	elif(noptas<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:36:23) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas==-1):
		falta=falta+1
	elif(notas>=6):
		apro=aprov+1
	elif(noptas<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:36:52) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas==-1):
		falta=falta+1
	elif(notas>=6):
		apro=aprov+1
	elif(noptas<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:27) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas ==-1):
		falta=falta+1
	elif(notas>=6):
		apro=aprov+1
	elif(noptas<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:40:12) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas>=6):
		apro=aprov+1
	elif(noptas<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:42:17) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		apro=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(size(notas))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:43:24) 
-- CODE:
from numpy import *
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		apro=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:44:03) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont<size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		apro=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:44:52) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		apro=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:45:29) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas(cont)<0):
		falta=falta+1
	elif(notas(cont)>=6):
		apro=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:45:47) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas(cont)<0):
		falta=falta+1
	elif(notas(cont)>=6):
		aprov=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:46:48) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		aprov=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:48:02) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < 4):
	if(notas(cont)==-1):
		falta=falta+1
	elif(notas(cont)>=6):
		aprov=aprov+1
	elif(notas(cont)<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:52:02) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:52:18) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	cont=cont+1	
print(falta)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:54:28) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:53:18) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=6)	:
	
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)


-- ERROR:
File "XXXX", line 17
    cont=cont+1	
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:53:43) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	
	
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:54:31) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	
	
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:15:53) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivos)/pres))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:28:35) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=conti1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivos)/pres))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:29:00) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=conti1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivos)/pres))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:29:57) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivos)/pres))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:31:01) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivo)/pres))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:32:26) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivo)/pres), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:34:08) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(round(sum(v_positivo)/size(v_positivo)), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:35:28) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:35:28) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:40:49) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:41:10) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>=0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:42:26) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>=0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 23:52:11) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>=0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:06:39) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>=0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		v_positivo[pres]=notas[cont]
		pres=pres+1
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(v_positivo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:12:38) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
cont1=0
cont2=0
while(cont1<size(notas)):
	if(notas[cont1]>=0):
		cont2=cont2+1
	cont1=cont1+1	
	v_positivo=zeros(cont2, dtype=int)
	
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:14:57) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:16:39) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	elif(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
File "XXXX", line 10
    elif(notas[cont]==-1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:17:42) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:18:18) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
File "XXXX", line 10
    elif(notas[cont]>=0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:18:35) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
	elif(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
File "XXXX", line 13
    elif(notas[cont]==-1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:18:56) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
	elif(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	cont=cont+1
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
File "XXXX", line 13
    elif(notas[cont]==-1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:19:17) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	
	elif(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	cont=cont+1
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:26:06) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0)and(notas[cont]<=10):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:29:46) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]==-1):
		falta=falta+1	
	cont=cont+1	
print(pres)	
print(aprov)
print(rep)
print(falta)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:35:51) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]==-1):
		falta=falta+1	
	cont=cont+1	
print(pres)	
print(aprov)
print(rep)
print(falta)

-- EXECUTION TIME:
0.523452
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
45
0
3
0
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
17.0
0
6
0
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
70.32
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:35:52) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]>=0):
		pres=pres+notas[cont]
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]==-1):
		falta=falta+1	
	cont=cont+1	
print(pres)	
print(aprov)
print(rep)
print(falta)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:39:03) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:44:15) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6)and(notas[cont]<=10):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:44:36) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
		rep=rep+1
	elif(notas[cont]>=6)and(notas[cont]<=10):
		aprov=aprov+1
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:45:51) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
		rep=rep+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:46:19) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
		rep=rep+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:46:26) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
		rep=rep+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:46:38) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
		rep=rep+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:05:44) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:12:53) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres/aprov+rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:12:57) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres/aprov+rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:13:59) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:15:57) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(aprov+rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:16:46) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)
print(pres/aprov+rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:19:34) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov+rep)
print(pres)

print(pres/(aprov+rep))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:21:40) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)

print(pres/(aprov+rep))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:22:37) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont]
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont]
	elif(notas[cont]>=0):
		pres=pres+notas[cont]
	cont=cont+1	
print(falta)	
print(aprov)
print(rep)

print(round(pres/(aprov+rep), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:47:46) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:47:51) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome(i))

-- EXECUTION TIME:
0.382955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1580/main.py", line 28, in <module>
    print(nome(i))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:48:04) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:48:58) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome[i])

-- EXECUTION TIME:
0.532762
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:59:56) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:00:00) 
-- CODE:
from numpy import*
notas=array(eval(input("notas obtidas: ")))
nome=array(eval(input("nome dos alunos: ")))
cont=0
falta=0
aprov=0
rep=0
pres=0
i=0 #para achar o indice da maior nota e procurar o nome referente a ele 
while(cont < size(notas)):
	if(notas[cont]==-1):
		falta=falta+1
	elif(notas[cont]>=6):
		aprov=aprov+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]<6):
		rep=rep+1
		pres=pres+notas[cont] #tambem se conta para tirar a media
	elif(notas[cont]>=0):
		pres=pres+notas[cont] #se conta para tirar a media
	cont=cont+1
while(notas[i]!=max(notas)):
	i=i+1
print(falta)	
print(aprov)
print(rep)
print(round(pres/(aprov+rep), 2))
print(nome[i])

-- EXECUTION TIME:
0.331237
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
